--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 <body>
     <h1>Welcome to WDD130 Web Projects</h1>
     <nav>
-    <a href="aboutme/index.html">About Me Page</a>
-    <a href="wwr/index.html">White Water Rafting Website</a>
-    <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-    <a href="positioning.html">Positioning Activity</a>
-    <a href="#">Personal Website</a>
-    <a href="#">Personal site-plan-rafting</a>
+        <a href="aboutme/index.html">About Me Page</a>
+        <a href="wwr/index.html">White Water Rafting Website</a>
+        <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+        <a href="positioning.html">Positioning Activity</a>
+        <a href="#">Personal Website</a>
+        <a href="#">Personal Siteplan</a>
+    </nav>
+    <p>Bailey Diaz - WDD130</p>
+
+
 </body>
 
 </html>
