--- a/wwr/index.html
+++ b/wwr/index.html
@@ -10,14 +10,14 @@
 <body>
     <div id="content">
         <header>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="images/rafting.jpg" alt="'Dry Oar Logo">
+            <a id="logo-link" href="index.html">
+                <img class="logo" src="images/rafting.png" alt="Dry Oar Logo">
             </a>
             <nav a>
                 <a href="index.html">Home</a>
                 <a href="#">Page 2</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="'contactus.html">Contact Us</a>
+                <a href="contactus.html">Contact Us</a>
             </nav a>
         </header>
         <div id="hero">
