--- a/wwr/index.html
+++ b/wwr/index.html
@@ -13,12 +13,12 @@
             <a id="logo-link" href="index.html">
                 <img class="logo" src="images/rafting.png" alt="Dry Oar Logo">
             </a>
-            <nav a>
+            <nav>
                 <a href="index.html">Home</a>
                 <a href="#">Page 2</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
-            </nav a>
+            </nav>
         </header>
         <div id="hero">
             <div id="hero-box">
@@ -59,19 +59,20 @@
                 <p>Enjoy the breathtaking scenery.  From valleys, meadows, canyons, and high peaks; it's way more than just the rapids.  It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
                 <a class="join" href="rivers.html">Join Us</a>
             </section>
+            </div>
         </main>
         <footer>
             <h3>Dry Oar &copy; 2022 - Bailey Diaz</h3>
             <h3><a href='site-plan-rafting.html'>Site Plan</a></h3>
             <h3><a href='contactus.html'>Contact Us</a></h3>
             <div class='social'>
-                <a href="https://facebook.com" target=_blank">
+                <a href="https://facebook.com" target='_blank'>
                     <img src="images/facebook.png" alt="facebook icon">
                 </a>
                 <a href="https://twitter.com" target="_blank">
                     <img src='images/twitter.png' alt='twitter icon'>
                 </a>
-                <a href="https://instagram.com" target="'_blank">
+                <a href="https://instagram.com" target="_blank">
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
