--- a/book_of_hoops/site-plan.html
+++ b/book_of_hoops/site-plan.html
@@ -32,7 +32,7 @@
         <h2>Branding</h2>
         <h3>Website Logo</h3>
         <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-        <img id='logo'src="images/book_of_hoops.jpeg" alt="logo">
+        <img id='logo'src="images/logo.jpeg" alt="logo">
         <hr>
         <h2>
             Style Guide
@@ -175,21 +175,21 @@ Now, on the third, we will have all the latest news.  You can keep tabs on wheth
 
         <h3>Home</h3>
         <p>         
-            [Any additional details about home that the wireframe does not make clear]
+            The images and text I have shown will be "news".  
         </p>
-        <img src="#" alt="home page wireframe">
+        <img src="images/book_of_hoops_1.png" alt="home page wireframe">
 
-        <h3>[Page 2]</h3>
+        <h3>Statistics Selector</h3>
         <p>         
-            [Any additional details about page 2 that the wireframe does not make clear]
+            This page is used to compare statistics that idealy would be connected with a database
         </p>
-        <img src="#" alt="page 2 wireframe">
+        <img src="images/book_of_hoops_2.png" alt="page 2 wireframe">
 
-        <h3>[Page 3]</h3>
+        <h3>Content</h3>
         <p>         
-            [Any additional details about page 3 that the wireframe does not make clear]
+            Each image shown would really be a video that we would have play in the browser.
         </p>
-        <img src="#" alt="page 3 wireframe">
+        <img src="images/book_of_hoops_3.png" alt="page 3 wireframe">
 
         </main>
     </div>
