--- a/wwr/index.html
+++ b/wwr/index.html
@@ -16,7 +16,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
+                <a href="child_page.html">Page 2</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
@@ -58,7 +58,7 @@
                 <a class='join' href="rivers.html">Join Us</a>
             </section>
         </main>
-        
+    
         <footer>
             <h3>Dry Oar &copy; 2022 - Bailey Diaz</h3>
             <h3><a href='site-plan-rafting.html'>Site Plan</a></h3>
