added youtube video

--- a/book_of_hoops/content.html
+++ b/book_of_hoops/content.html
@@ -22,8 +22,11 @@
     </header>
 
     <main>
-        <iframe width="420" height="315" src="https://www.youtube.com/watch?v=41yT_6fpgR8&ab_channel=Undisputed%3ASkipandShannon">
-</iframe>
+        <div class = 'first_video'>
+        <iframe width="420" height="315" src="https://www.youtube.com/watch?v=41yT_6fpgR8&ab_channel=Undisputed%3ASkipandShannon"></iframe>
+        <p>UNDISPUTED - "Kevin Durant to Miami Heat" - Shannon predicts KD's future if Kyrie leaves the Nets</p>
+        </div>
+
     </main>
 
     <footer id = 'footer-main'>
