--- a/book_of_hoops/content.html
+++ b/book_of_hoops/content.html
@@ -23,8 +23,8 @@
 
     <main>
         <div class = 'first_video'>
-        <iframe width="420" height="315" src="https://www.youtube.com/watch?v=41yT_6fpgR8&ab_channel=Undisputed%3ASkipandShannon"></iframe>
-        <p>UNDISPUTED - "Kevin Durant to Miami Heat" - Shannon predicts KD's future if Kyrie leaves the Nets</p>
+        <iframe width="420" height="315" src="https://www.youtube.com/embed/KRmbODaIiXo"></iframe>
+        <p>UNDISPUTED - "KD betrayed Kyrie, they're no longer best friends" - Skip Bayless</p>
         </div>
 
     </main>
