--- a/book_of_hoops/content.html
+++ b/book_of_hoops/content.html
@@ -23,7 +23,7 @@
 
     <main>
         <div class = 'first_video'>
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/KRmbODaIiXo"></iframe>
+        <iframe width="420" height="315" src="https://www.youtube.com/embed/KRmbODaIiXo?rel=0&autoplay=1"></iframe>
         <p>UNDISPUTED - "KD betrayed Kyrie, they're no longer best friends" - Skip Bayless</p>
         </div>
 
