added all videos and titles

--- a/book_of_hoops/content.html
+++ b/book_of_hoops/content.html
@@ -24,23 +24,23 @@
     <main>
         <div class = 'first_video'>
 
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/KRmbODaIiXo?rel=0&autoplay=1"></iframe>
-        <p>UNDISPUTED - "KD betrayed Kyrie, they're no longer best friends" - Skip Bayless</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/zFOmK_hK5GQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>Lakers considered “most significant threat” for Kyrie Irving, if he leaves Nets | NBA | UNDISPUTED</p>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/KDpyJGyj3IA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>Top 100 Kobe Bryant Dunks of All-Time | EPIC MONTAGE!</p>
 
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/KRmbODaIiXo?rel=0&autoplay=1"></iframe>
-        <p>UNDISPUTED - "KD betrayed Kyrie, they're no longer best friends" - Skip Bayless</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/H7tEuqD2ad8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>2022 NBA Finals BEST Highlights & Moments 🏆</p>
 
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/KRmbODaIiXo?rel=0&autoplay=1"></iframe>
-        <p>UNDISPUTED - "KD betrayed Kyrie, they're no longer best friends" - Skip Bayless</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/yZeBJfaez40" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>The NBA/’s Most Used Play - Why It WORKS</p>
 
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/KRmbODaIiXo?rel=0&autoplay=1"></iframe>
-        <p>UNDISPUTED - "KD betrayed Kyrie, they're no longer best friends" - Skip Bayless</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/S1caLS4r-d0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>Steph Curry And Draymond Green Join Inside Guys After Clinching West | NBA on TNT presented by Kia</p>
 
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/KRmbODaIiXo?rel=0&autoplay=1"></iframe>
-        <p>UNDISPUTED - "KD betrayed Kyrie, they're no longer best friends" - Skip Bayless</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/iTFtY6KgS58" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>How Michael Jordan's Trainer Helped Him Become the GOAT | The Assist | GQ Sports</p>
 
         </div>
 
