added html for all three pages

--- a/book_of_hoops/content.html
+++ b/book_of_hoops/content.html
@@ -57,8 +57,10 @@
 
         </section>
 
-        <div id = 'information-title-main'><h1>Everyone loves content</h></div>
-        <div id = 'information-main'><p>Content catered to you If that’s not exciting enough, on the other page, you’ll find a stream of content directly catered to you. No more having to stream from a platform or go digging for the videos of last night's highlights or see your favorite analysts' hottest takes. Our algorithm will provide you with the videos you want to see before you even want to see em! Highlights, analysis, rumors, oh yeah! Now, on the third, we will have all the latest news. You can keep tabs on whether your favorite player dropped a 50-piece on the rival team or if that trade finally went through. We know you’ll enjoy it. We hope our loyal hoopers will come to our site for a myriad of reasons. The main reasons would be to compare players and stats, stay updated, and be entertained.</p></div>
+        <section id = content-content>
+            <h1>Everyone loves content</h>
+            <p>Content catered to you If that’s not exciting enough, on the other page, you’ll find a stream of content directly catered to you. No more having to stream from a platform or go digging for the videos of last night's highlights or see your favorite analysts' hottest takes. Our algorithm will provide you with the videos you want to see before you even want to see em! Highlights, analysis, rumors, oh yeah! Now, on the third, we will have all the latest news. You can keep tabs on whether your favorite player dropped a 50-piece on the rival team or if that trade finally went through. We know you’ll enjoy it. We hope our loyal hoopers will come to our site for a myriad of reasons. The main reasons would be to compare players and stats, stay updated, and be entertained.</p>
+        </section>
 
     </main>
 
