--- a/book_of_hoops/site-plan.html
+++ b/book_of_hoops/site-plan.html
@@ -52,7 +52,7 @@
         <table class="colors">
             <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
             <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-            <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
+            <tr><td class="primary">[#000000]</td><td class="secondary">[#B980E4]</td><td class="accent1">[#4449B7]</td><td class="accent2">[BED3F0]</td></tr>
         </table>
 
         <!-- ------------------------Step 9------------------------------ -->
