--- a/book_of_hoops/index.html
+++ b/book_of_hoops/index.html
@@ -27,26 +27,26 @@
 
         <section id = 'index-content'>
 
-            <section class = 'nba-draft'>
+            <div class = 'nba-draft'>
                 <img class="random-court" src="images/random-court.jpg" alt="random court">
                 <p>Who won the 2022 NBA draft?</p>
-            </section>
+            </div>
 
-            <section class = 'free-agency'>
+            <div class = 'free-agency'>
                 <img class="nets-court" src="images/nets-court.jpg" alt="nets court">
                 <p>Kyrie Irving's top 6 free agency destinations</p>
-            </section>
+            </div>
             
-            <section class = 'jumpshot'>
+            <div class = 'jumpshot'>
                 <img class="outside-court" src="images/outside-court.jpg" alt="outside court">
                 <p>How to instantly improve your jumpshot</p>
-            </section>
+            </div>
 
-            <section id = 'about-us'>
+            <div id = 'about-us'>
                 <h4>About Us</h4>
                 <p>As a teenager, I began to be instantly interested in the National Basketball Association.  Stephen Curry was destroying opposing offenses with his insane ball handling and unprecedented shooting ability.  My friends and I began to have lively debates on which player was better than the other, and my passion continued to grow. We would watch analytical videos, play video games, and play on the blacktop to satiate our obsession.  </p>
                 <img class="our-story-pic" src="images/youth.jpg" alt="picture of youth">
-            </section>
+            </div>
 
         </section>
 
