--- a/book_of_hoops/content.html
+++ b/book_of_hoops/content.html
@@ -21,45 +21,43 @@
 
     </header>
 
-    <main>
+    <main class = 'content-content'>
 
-        <section id = 'videos-and-titles'>
 
             <div class = 'first-video'>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/zFOmK_hK5GQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/zFOmK_hK5GQ" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>Lakers considered “most significant threat” for Kyrie Irving, if he leaves Nets | NBA | UNDISPUTED</p>
             </div>
 
             <div class = 'second-video'>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/KDpyJGyj3IA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/KDpyJGyj3IA" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>Top 100 Kobe Bryant Dunks of All-Time | EPIC MONTAGE!</p>
             </div>
 
             <div class = 'third-video'>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/H7tEuqD2ad8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/H7tEuqD2ad8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>2022 NBA Finals BEST Highlights & Moments 🏆</p>
             </div>
 
             <div class = 'fourth-video'>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/yZeBJfaez40" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>The NBA/’s Most Used Play - Why It WORKS</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/yZeBJfaez40" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p>The NBA's Most Used Play - Why It WORKS</p>
             </div>
 
             <div class = 'fifth_video'>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/S1caLS4r-d0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/S1caLS4r-d0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>Steph Curry And Draymond Green Join Inside Guys After Clinching West | NBA on TNT presented by Kia</p>
             </div>
 
-            <div class = 'sixth_video'></div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/iTFtY6KgS58" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class = 'sixth_video'>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/iTFtY6KgS58" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>How Michael Jordan's Trainer Helped Him Become the GOAT | The Assist | GQ Sports</p>
             </div>
 
-        </section>
 
-        <section id = content-content>
-            <h1>Everyone loves content</h>
-            <p>Content catered to you If that’s not exciting enough, on the other page, you’ll find a stream of content directly catered to you. No more having to stream from a platform or go digging for the videos of last night's highlights or see your favorite analysts' hottest takes. Our algorithm will provide you with the videos you want to see before you even want to see em! Highlights, analysis, rumors, oh yeah! Now, on the third, we will have all the latest news. You can keep tabs on whether your favorite player dropped a 50-piece on the rival team or if that trade finally went through. We know you’ll enjoy it. We hope our loyal hoopers will come to our site for a myriad of reasons. The main reasons would be to compare players and stats, stay updated, and be entertained.</p>
+        <section id = 'content-content'>
+            <h1>Everyone loves content</h1>
+            <p>Content catered to you If that's not exciting enough, on the other page, you'll find a stream of content directly catered to you. No more having to stream from a platform or go digging for the videos of last night's highlights or see your favorite analysts' hottest takes. Our algorithm will provide you with the videos you want to see before you even want to see em! Highlights, analysis, rumors, oh yeah! Now, on the third, we will have all the latest news. You can keep tabs on whether your favorite player dropped a 50-piece on the rival team or if that trade finally went through. We know you'll enjoy it. We hope our loyal hoopers will come to our site for a myriad of reasons. The main reasons would be to compare players and stats, stay updated, and be entertained.</p>
         </section>
 
     </main>
