--- a/book_of_hoops/stats.html
+++ b/book_of_hoops/stats.html
@@ -53,6 +53,9 @@
         <h3>Book of Hoops &copy; 2022 - Bailey Diaz</h3>
         <h3><a href='site-plan-rafting.html'>Site Plan</a></h3>
         <h3><a href='contactus.html'>Contact Us</a></h3>
+        <nav>
+            <a href="site-plan.html">Site-Plan</a>
+        </nav>
         <div class='social'>
             <a href="https://facebook.com" target='_blank'>
                 <img src="images/facebook.png" alt="facebook icon">
