--- a/wwr/index.html
+++ b/wwr/index.html
@@ -63,6 +63,9 @@
             <h3>Dry Oar &copy; 2022 - Bailey Diaz</h3>
             <h3><a href='site-plan-rafting.html'>Site Plan</a></h3>
             <h3><a href='contactus.html'>Contact Us</a></h3>
+            <nav>
+                <a href="site-plan.html">Site-Plan</a>
+            </nav>
             <div class='social'>
                 <a href="https://facebook.com" target='_blank'>
                     <img src="images/facebook.png" alt="facebook icon">
