--- a/book_of_hoops/index.html
+++ b/book_of_hoops/index.html
@@ -46,7 +46,7 @@
                 <h4>About Us</h4>
                 <p>As a teenager, I began to be instantly interested in the National Basketball Association.  Stephen Curry was destroying opposing offenses with his insane ball handling and unprecedented shooting ability.  My friends and I began to have lively debates on which player was better than the other, and my passion continued to grow. We would watch analytical videos, play video games, and play on the blacktop to satiate our obsession.  </p>
                 <img class="our-story-pic" src="images/youth.jpg" alt="picture of youth">
-            </div>
+        
 
         </section>
 
@@ -54,7 +54,7 @@
 
     <footer id = 'footer-main'>
         <h3>Book of Hoops &copy; 2022 - Bailey Diaz</h3>
-        <h3><a href='site-plan-rafting.html'>Site Plan</a></h3>
+        <h3><a href='site-plan.html'>Site Plan</a></h3>
         <h3><a href='contactus.html'>Contact Us</a></h3>
         <div class='social'>
             <a href="https://facebook.com" target='_blank'>
