--- a/book_of_hoops/index.html
+++ b/book_of_hoops/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/book_of_hoops.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +18,7 @@
             <a href="index.html">Home</a>
             <a href="stats.html">Stats</a>
             <a href="content.html">Videos</a>
+            <a href="#">Contact Us</a>
         </nav>
 
     </header>
@@ -44,9 +46,9 @@
 
             <div id = 'about-us'>
                 <h4>About Us</h4>
+                <img class="youth" src="images/youth.jpg" alt="picture of youth">
                 <p>As a teenager, I began to be instantly interested in the National Basketball Association.  Stephen Curry was destroying opposing offenses with his insane ball handling and unprecedented shooting ability.  My friends and I began to have lively debates on which player was better than the other, and my passion continued to grow. We would watch analytical videos, play video games, and play on the blacktop to satiate our obsession.  </p>
-                <img class="our-story-pic" src="images/youth.jpg" alt="picture of youth">
-        
+            </div>
 
         </section>
 
