created the 'stats' page

--- a/book_of_hoops/stats.html
+++ b/book_of_hoops/stats.html
@@ -23,8 +23,7 @@
     </header>
 
     <main>
-
-        <h1>Statistics Selector</h1>
+        <div id="statistics-selector"><h1>Statistics Selector</h1></div>
 
         <div id = 'stats-grid'>
         
@@ -35,15 +34,16 @@
             </div>
 
             <div id = 'curry-stats'>
-                <p>Stephen Curry 2022 Finals Statistics</p>
-                <img class="curry-stat-pic" src="images/curry-stats.png" alt="curry stats">
+                <div class ="background-curry">
+                    <h2>Stephen Curry's Legendary 2022 Finals Run</h2>
+                    <img class="curry-stat-pic" src="images/curry-stats.png" alt="curry stats">
+                </div>    
             </div>
 
             <div id = 'stats-info'>
-                <div id = 'background'></div>
-                <div>container</div>
                 <img class="kobe-pic" src="images/kobe.jpg" alt="kobe picture">
-                <p>When I was younger, my friends would pit two players against one another and debate with stats.  They tell no lies, right?!  However, we got this vital information from websites that were truly boring and uninspired. They gave you exactly what you wanted, but nothing else.  And man it was tough reading through all the lines of stats!  They did the job simply, but…here we also give the people what they want.  With a direct stat comparison tool, you can pull up Kobe and Jordan’s best playoff runs to compare the greats.  Now, we hope to provide a tool for those young and old to live to watch a late-night doubleheader and argue about whom the true G.O.A.T is.  A tool that will provide those who want all thing's basketball.  No more needing to sift through lines of data while your eyes are being burned on the white state page, we got you. </p>
+                <h3>Unparalleled Comparison</h3>
+                <div id="stat-paragraph"><p>When I was younger, my friends would pit two players against one another and debate with stats.  They tell no lies, right?!  However, we got this vital information from websites that were truly boring and uninspired. They gave you exactly what you wanted, but nothing else.  And man it was tough reading through all the lines of stats!  They did the job simply, but…here we also give the people what they want.  With a direct stat comparison tool, you can pull up Kobe and Jordan’s best playoff runs to compare the greats.  Now, we hope to provide a tool for those young and old to live to watch a late-night doubleheader and argue about whom the true G.O.A.T is.  A tool that will provide those who want all thing's basketball.  No more needing to sift through lines of data while your eyes are being burned on the white state page, we got you. </p></div>
             </div>
 
         </div>
