--- a/book_of_hoops/stats.html
+++ b/book_of_hoops/stats.html
@@ -18,8 +18,14 @@
             <a href="index.html">Home</a>
             <a href="stats.html">Stats</a>
             <a href="content.html">Videos</a>
+            <div class="login-container">
+                <form action="/action_page.php">
+                  <input type="text" placeholder="Username" name="username">
+                  <input type="text" placeholder="Password" name="psw">
+                  <button type="submit">Login</button>
+                </form>
+              </div>
         </nav>
-
     </header>
 
     <main>
