FINISHED IT ALL!

--- a/book_of_hoops/index.html
+++ b/book_of_hoops/index.html
@@ -18,7 +18,13 @@
             <a href="index.html">Home</a>
             <a href="stats.html">Stats</a>
             <a href="content.html">Videos</a>
-            <a href="#">Contact Us</a>
+            <div class="login-container">
+                <form action="/action_page.php">
+                  <input type="text" placeholder="Username" name="username">
+                  <input type="text" placeholder="Password" name="psw">
+                  <button type="submit">Login</button>
+                </form>
+              </div>
         </nav>
 
     </header>
