--- a/book_of_hoops/content.html
+++ b/book_of_hoops/content.html
@@ -18,6 +18,13 @@
             <a href="index.html">Home</a>
             <a href="stats.html">Stats</a>
             <a href="content.html">Videos</a>
+            <div class="login-container">
+                <form action="/action_page.php">
+                  <input type="text" placeholder="Username" name="username">
+                  <input type="text" placeholder="Password" name="psw">
+                  <button type="submit">Login</button>
+                </form>
+              </div>
         </nav>
 
     </header>
@@ -26,8 +33,8 @@
 
 
             <div class = 'first-video'>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/zFOmK_hK5GQ" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>Lakers considered “most significant threat” for Kyrie Irving, if he leaves Nets | NBA | UNDISPUTED</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/F6a1gnOQQJs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p>2001 NBA Finals - Game 1 - Full Game Highlights - Philadelphia 76ers vs Los Angeles Lakers</p>
             </div>
 
             <div class = 'second-video'>
@@ -56,7 +63,7 @@
             </div>
 
 
-        <section id = 'content-content'>
+        <section id = 'content-explaination'>
             <h1>Everyone loves content</h1>
             <p>Content catered to you If that's not exciting enough, on the other page, you'll find a stream of content directly catered to you. No more having to stream from a platform or go digging for the videos of last night's highlights or see your favorite analysts' hottest takes. Our algorithm will provide you with the videos you want to see before you even want to see em! Highlights, analysis, rumors, oh yeah! Now, on the third, we will have all the latest news. You can keep tabs on whether your favorite player dropped a 50-piece on the rival team or if that trade finally went through. We know you'll enjoy it. We hope our loyal hoopers will come to our site for a myriad of reasons. The main reasons would be to compare players and stats, stay updated, and be entertained.</p>
         </section>
